MB-49767: Add extra info to exception message in PDM

Add extra information about the state of variables in
PassiveDurabilityMonitor::completeSyncWrite(), when throwing an
exception due to us not finding a matching prepare in the
trackedWrites due to there not being any trackedWrites left.

Change-Id: If2b2eb9c26b994d5da97f52eaefef3ec8493b0d8
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/166523
Reviewed-by: James H <james.harrison@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>